grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana-tcp
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 443
    targetPort: 3000
    name: https
  type: LoadBalancer
  loadBalancerIP: 192.168.30.206
  sessionAffinity: ClientIP
