grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  labels:
    app: nginx-ingress-grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: public
  rules:
  - host: grafana.padnet.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service-tcp
            port:
              number: 3000
  tls:
  - hosts:
    - grafana.padnet.io
    # cert-manager will store the created cert in this secret
    secretName: grafana.padnet.io-tls
